--- a/index.html
+++ b/index.html
@@ -22,25 +22,15 @@
 					</nav>
 
 				<!-- Main -->
-
-				<!-- <a href="#projects" class="jumplink pic">
-					<span class="arrow icon solid fa-chevron-right"><span>See my projects</span></span>
-					<img src="images/me.jpg" alt="" />
-				</a> -->
 					<div id="main">
-
 						<!-- Home-->
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Hi, I'm Ben.</h1>
 									<p>Student-Athlete at Stanford University</p>
 								</header>
-								<!-- <a href="#about-me" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my projects</span></span>
-									<img src="images/cover.jpg" alt="" />
-								</a> -->
-								<a href="#projects" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my projects</span></span>
+								<a href="#about-me" class="jumplink pic">
+									<span class="arrow icon solid fa-chevron-right"><span>Find out more about me</span></span>
 									<img src="images/cover.jpg" alt="" />
 								</a>
 							</article>
