Fixed app title

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							</article>
 
 							<article id="recipe" class="panel">
-								<h2>Weather Music App</h2> <br>
+								<h2>Recipe Finder</h2> <br>
 								<img class="in-proj-img" src="images/recipe.png" alt="">
 								<a href="https://github.com/benjaminho1998/recipe-finder-app" target="_blank" class="fab fa-github-square fa-2x black-icon"></a> <br>
 								<p class="med">
