Added calculator project

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 											<h3>Fact Generator</h3>
 											<a href="#facts" class="image fit proj-link"><img style="border: 1px solid black;" src="images/facts.png" alt="" class="proj-img"></a>
 										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<h3>Calculator</h3>
+											<a href="#calc" class="image fit proj-link"><img style="border: 1px solid black;" src="images/calc.png" alt="" class="proj-img"></a>
+										</div>
 									</div>
 								</section>
 							</article>
@@ -163,6 +167,19 @@
 								</p>
 								<p class="med">
 									<b>Technologies:</b> React.js, React Router, React Bootstrap, Axios, Node.js, Express, HTML & CSS
+								</p>
+								<a href="#projects" class="icon solid fa-arrow-left fa-lg black-icon"></a>
+							</article>
+
+							<article id="calc" class="panel">
+								<h2>Calculator</h2> <br>
+								<img class="in-proj-img" src="images/calc.png" alt="">
+								<a href="https://github.com/benjaminho1998/calc" target="_blank" class="fab fa-github-square fa-2x black-icon"></a> <br>
+								<p class="med">
+									<b>Description:</b> I developed a simple web app calculator that uses React.js for the interface, and JavaScript for the computations.
+								</p>
+								<p class="med">
+									<b>Technologies:</b> React.js, JavaScript, HTML & CSS
 								</p>
 								<a href="#projects" class="icon solid fa-arrow-left fa-lg black-icon"></a>
 							</article>
