--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Hi, I'm Ben.</h1>
-									<p>Student-Athlete at Stanford University</p>
+									<p>Software Developer at GM</p>
 								</header>
 								<a href="#about-me" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>Find out more about me</span></span>
@@ -40,7 +40,7 @@
 								<header>
 									<h2>About me</h2>
 									<p class="bio">
-										I'm Benjamin Ho and I’m a senior majoring in Symbolic Systems with a concentration in HCI at Stanford University. As well as developing frontend code in React.js, I also have experience in UX design and Python. I have worked a few jobs and internships gaining technical, teamwork and leadership skills. I am currently looking for full-time positions.
+										I'm Benjamin Ho and I’m a software developer at General Motors. I'm also a recent grad from Stanford University with a BS in Symbolic Systems concentrating in HCI. I am proficient with JavaScript/React.js, Python, HTML, and CSS.
 									</p>
 									<h6>Contact Info</h6>
 									<p class="bio">
