--- a/index.html
+++ b/index.html
@@ -245,6 +245,22 @@
 									<tr>
 										<td>
 											<h3>
+												General Motors
+											</h3>
+											<b>
+												Software Developer
+											</b> <br>
+											<span>July 2020 - Present</span>
+										</td>
+										<td style="width: 60%;">
+											<p class="med">
+												I'm currently a software developer at GM using Angular on the Customer Experience MyAccount team.
+											</p>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<h3>
 												J.Crew
 											</h3>
 											<b>
