Fixed spacing again

--- a/index.html
+++ b/index.html
@@ -258,9 +258,8 @@
 											</p>
 										</td>
 									</tr>
-									<br><br>
 									<tr>
-										<td>
+										<td class="space">
 											<h3>
 												J.Crew
 											</h3>
