Changed job description

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 								</header>
 								<table style="width: 100%; table-layout: fixed;">
 									<tr>
-										<td class="space">
+										<td style="width: 60%;">
 											<h3>
 												General Motors
 											</h3>
@@ -254,7 +254,7 @@
 										</td>
 										<td style="width: 60%;">
 											<p class="med">
-												I'm currently a software developer at GM using Angular on the Customer Experience MyAccount team.
+												I'm currently a software developer at General Motors on the Customer Experience MyAccount team. My role includes developing front-end components in Angular, and regularly communicating with other teams using Agile in order to understand requirements and increase efficiency.
 											</p>
 										</td>
 									</tr>
