Added two new projects

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
+											<h3>Lost but Found</h3>
+											<a href="#lost-but-found" class="image fit proj-link"><img class="proj-img" src="images/lbf1.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<h3>Spotify Replica</h3>
+											<a href="#spotify-replica" class="image fit proj-link"><img class="proj-img" src="images/spotify1.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
 											<h3>Spellbound</h3>
 											<a href="#spellbound" class="image fit proj-link"><img class="proj-img" src="images/spellbound.png" alt=""></a>
 										</div>
@@ -93,6 +101,41 @@
 							</article>
 
 						<!-- In Projects -->
+							<article id="lost-but-found" class="panel">
+								<h2>Lost but Found</h2> <br>
+								<h6>Full Size:</h6>
+								<img class="in-proj-img" src="images/lbf1.png" alt="">
+								<img class="in-proj-img" src="images/lbf2.png" alt="">
+								<h6>Mobile Layout:</h6>
+								<img class="in-proj-img" src="images/lbf3.png" alt="">
+								<a href="https://github.com/benjaminho1998/lost-but-found-MTA" target="_blank" class="fab fa-github-square fa-2x black-icon"></a> <br>
+								<p class="med">
+									<b>Description:</b> This is a fully-responsive web app that displays the lost and found items of New York City's MTA system in hopes of helping people track their belongings and contacting the proper MTA authorities to facilitate recoveries. I built this because I could not find any website that displayed the MTA's lost and found API. I also wanted to practice using React Hooks and React Bootstrap. Currently working on implementing Redux and deploying.
+								</p>
+								<p class="med">
+									<b>Technologies</b> React.js, SASS, React Bootstrap, Node.js, Express, React Router
+								</p>
+								<a href="#projects" class="icon solid fa-arrow-left fa-lg black-icon"></a>
+							</article>
+
+							<article id="spotify-replica" class="panel">
+								<h2>Spotify Replica</h2> <br>
+								<h6>Replica:</h6>
+								<img class="in-proj-img" src="images/spotify1.png" alt="">
+								<h6>Actual:</h6>
+								<img class="in-proj-img" src="images/real-spotify.png" alt="">
+								<h6>Mobile Layout:</h6>
+								<img class="in-proj-img" src="images/spotify3.png" alt="">
+								<a href="https://github.com/benjaminho1998/top-songs-spotify" target="_blank" class="fab fa-github-square fa-2x black-icon"></a> <br>
+								<p class="med">
+									<b>Description:</b> This is a fully-responsive static web app I made to practice using the Angular Material UI library, SCSS, and responsive layouts. I copied one of Spotify's homepages and included some of my favorite tracks. The only differences include simple word font/sizing/positioning, and the absence of the black overlay in my replica (which in my opinion looks a lot better).
+								</p>
+								<p class="med">
+									<b>Technologies</b> Angular, Angular Material UI, SCSS
+								</p>
+								<a href="#projects" class="icon solid fa-arrow-left fa-lg black-icon"></a>
+							</article>
+
 							<article id="spellbound" class="panel">
 								<h2>Spellbound</h2> <br>
 								<img class="in-proj-img" src="images/spellbound.png" alt="">
@@ -130,11 +173,12 @@
 							</article>
 
 							<article id="weather" class="panel">
-								<h2>Weather Music App</h2> <br>
+								<h2>Weather App</h2> <br>
 								<img class="in-proj-img" src="images/weather.png" alt="">
+								<img class="in-proj-img" src="images/weather2.png" alt="">
 								<a href="https://github.com/benjaminho1998/weather-app" target="_blank" class="fab fa-github-square fa-2x black-icon"></a> <br>
 								<p class="med">
-									<b>Description:</b> I am still currently working on the project. The finished product will be able to take an inputted city location, and then give current and forecasted weather. Additionally, a music suggestion will be given based on the current weather/time.
+									<b>Description:</b> This weather app takes in a location as an input, and then displays the current and forecasted weather predictions for that area. I developed this weather app in order to practice building UI components in React, developing vanilla CSS techniques such as flexbox, and handling a multitude of 3rd party API's at the same time. 
 								</p>
 								<p class="med">
 									<b>Technologies:</b> React.js, Axios, HTML & CSS
