Added  to mta link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<img class="in-proj-img" src="images/lbf3.png" alt="">
 								<a href="https://github.com/benjaminho1998/lost-but-found-MTA" target="_blank" class="fab fa-github-square fa-2x black-icon"></a> <br>
 								<p class="med">
-									<b>Description:</b> This is a fully-responsive web app that displays the lost and found items of New York City's MTA system in hopes of helping people track their belongings and contacting the proper MTA authorities to facilitate recoveries. I built this because I could not find any website that displayed the MTA's lost and found API. I also wanted to practice using React Hooks and React Bootstrap. Currently working on implementing Redux and deploying.
+									<b>Description:</b> This is a fully-responsive web app that displays the lost and found items of New York City's MTA system in hopes of helping people track their belongings and contacting the proper MTA authorities to facilitate recoveries. I built this because I could not find any website that displayed the MTA's lost and found API. I also wanted to practice using React Hooks and React Bootstrap. Check it out here: <a href={"https://mtalostbutfound.herokuapp.com/"}>MTA Lost but Found</a>
 								</p>
 								<p class="med">
 									<b>Technologies</b> React.js, SASS, React Bootstrap, Node.js, Express, React Router
